src/main/default/objects/Status_History__c/Status_History__c.object-meta.xml
<CustomObject>
    <label>Status History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>