src/main/default/objects/Status_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who made the status change</inlineHelpText>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>