src/main/default/objects/Status_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <inlineHelpText>Date and time the status change was made.</inlineHelpText>
    <label>Changed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>