src/main/default/objects/Status_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New status of the job/ticket.</inlineHelpText>
    <label>New Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>StatusHistory_NewStatus</relationshipName>
    <type>Lookup</type>
</CustomField>