src/main/default/objects/Status_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Status__c</columns>
    <columns>Job__c</columns>
    <columns>Ticket__c</columns>
    <columns>Changed_Date__c</columns>
    <columns>Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>